bootstrap-override.css
#body {
  font-family: 'Montserrat', sans-serif;
  font-weight: 500;
  background-color: #E8E3D6;
  padding-top: 2em;
  height: 100vh;
  margin: 0;
  display: flex;
  flex-direction: column;
}

#subtitle {
  font-style: italic;
  padding-left: 10px;
  padding-right: 10px;
}

#logo {
  max-width: 50%;
  max-height: 40%;
}

#head {
  background-color: white;
  padding-bottom: 0;
  margin-bottom: 30px;
  max-height: 500px;
}

#navbar {
  background-color: #C8C2B8;
  font-family: 'Open Sans', sans-serif;
  font-weight: 700;
}

a#nav-links {
  color: black;
}

a:hover#nav-links {
  color: white;
}

a:active#nav-links {
  color: white;
}

#stylists,
#wellness,
#estheticians,
#medical-aesthetics {
  border-bottom: 2px solid black;
  font-family: 'Droid Serif', serif;
  font-weight: 400;
}

#suite-num {
  font-family: 'Droid Serif', serif;
  font-weight: 700;
}

#name {
  font-family: 'Open Sans', sans-serif;
  font-weight: 300;
}

#sched-link {
  background-color: #867970;
}

#sched-grey-link {
  background-color: #B8B8B8;
  pointer-events: none;
  cursor: default;
  color: white;
}

#floor {
  color: #AF8A2F;
}

#space {
  height: 50px;
}

a:hover#sched-link {
  background-color: #AF8A2F;
}

.footer {
  min-height: 40px;
  background-color: #AF8A2F;
  margin-top: auto;
  text-align: center;
}

.vertical-center {
  position: relative;
  top: 50%;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
}

